# qtrsch

./: .gitignore  factor_research.ipynb  factor_research_replicate.ipynb  group_neutralize.html  group_neutralize.ipynb  nlp_signal.ipynb  pricevolume_alpha.ipynb  pyproject.toml
crypto_study/: ETH_tweets.pkl  tweets_with_sentiment.pkl  twitter_alpha.ipynb  twitter_api.ipynb
