[tool.poetry]
name = "qtrsch"
version = "0.1.0"
description = ""
authors = ["jaepil-choi <chljeffreyz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^4.0.9"
numpy = "^1.26.2"
pandas = "^2.1.3"
tqdm = "^4.66.1"
matplotlib = "^3.8.2"
seaborn = "^0.13.0"
statsmodels = "^0.14.0"
scikit-learn = "^1.3.2"
pykrx = "^1.0.45"
jupyter-book = "^0.15.1"
ghp-import = "^2.1.0"
quantstats = "^0.0.62"
pyassetpricing = "^1.1"
cvxportfolio = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
